--- a/.github/workflows/preview.yaml
+++ b/.github/workflows/preview.yaml
@@ -20,6 +20,11 @@ jobs:
         
       - name: Pull Vercel Environment Information
         run: vercel pull --yes --environment=preview --token=${{ secrets.VERCEL_TOKEN }}
+
+# ---------------------------------------------
+      - name: Check style
+        run: npm run lint
+# ---------------------------------------------
         
       - name: Build Project Artifacts
         run: vercel build --token=${{ secrets.VERCEL_TOKEN }}
