--- a/.github/workflows/production.yaml
+++ b/.github/workflows/production.yaml
@@ -21,6 +21,11 @@ jobs:
        
       - name: Pull Vercel Environment Information
         run: vercel pull --yes --environment=production --token=${{ secrets.VERCEL_TOKEN }}
+
+# ---------------------------------------------
+      - name: Check style
+        run: npm run lint
+# ---------------------------------------------
         
       - name: Build Project Artifacts
         run: vercel build --prod --token=${{ secrets.VERCEL_TOKEN }}
