--- a/.github/workflows/preview.yaml
+++ b/.github/workflows/preview.yaml
@@ -16,7 +16,17 @@ jobs:
       - uses: actions/checkout@v2
       
       - name: Install Vercel CLI
-        run: npm install --global vercel@latest
+        run: npm install --global vercel@latest 
+
+#     ------------------------------------------
+      - name: Install ESLint 
+        run: npm init @eslint/config@latest
+
+      - name: Check style
+        run: npm run lint
+#     ------------------------------------------
+
+
         
       - name: Pull Vercel Environment Information
         run: vercel pull --yes --environment=preview --token=${{ secrets.VERCEL_TOKEN }}
@@ -24,11 +34,6 @@ jobs:
         
       - name: Build Project Artifacts
         run: vercel build --token=${{ secrets.VERCEL_TOKEN }}
-
-# ---------------------------------------------
-      - name: Check style
-        run: npm run lint
-# ---------------------------------------------
         
       - name: Deploy Project Artifacts to Vercel
         run: vercel deploy --prebuilt --token=${{ secrets.VERCEL_TOKEN }}
