--- a/.github/workflows/production.yaml
+++ b/.github/workflows/production.yaml
@@ -21,14 +21,17 @@ jobs:
        
       - name: Pull Vercel Environment Information
         run: vercel pull --yes --environment=production --token=${{ secrets.VERCEL_TOKEN }}
+
+#     ------------------------------------------
+      - name: Install ESLint 
+        run: npm init @eslint/config@latest
+
+      - name: Check style
+        run: npm run lint
+#     ------------------------------------------
         
       - name: Build Project Artifacts
         run: vercel build --prod --token=${{ secrets.VERCEL_TOKEN }}
-
-# ---------------------------------------------
-      - name: Check style
-        run: npm run lint
-# ---------------------------------------------
         
       - name: Deploy Project Artifacts to Vercel
         run: vercel deploy --prebuilt --prod --token=${{ secrets.VERCEL_TOKEN }}
