--- a/.github/workflows/preview.yaml
+++ b/.github/workflows/preview.yaml
@@ -19,15 +19,14 @@ jobs:
         run: npm install --global vercel@latest 
 
 #     ------------------------------------------
-      - name: Install ESLint 
-        run: npm init @eslint/config@latest
+#      - name: Install ESLint 
+#        run: npm init @eslint/config@latest
 
-      - name: Check style
-        run: npm run lint
+      - name: Install and Check style
+        run: |
+          npm ci 
+          npm run lint
 #     ------------------------------------------
-
-
-        
       - name: Pull Vercel Environment Information
         run: vercel pull --yes --environment=preview --token=${{ secrets.VERCEL_TOKEN }}
 
