--- a/.github/workflows/preview.yaml
+++ b/.github/workflows/preview.yaml
@@ -19,13 +19,16 @@ jobs:
         run: npm install --global vercel@latest 
 
 #     ------------------------------------------
-#      - name: Install ESLint 
-#        run: npm init @eslint/config@latest
-
       - name: Install and Check style
         run: |
           npm ci 
           npm run lint
+#     ------------------------------------------
+#     ------------------------------------------
+      - name: Current Folder and What is in Folder 
+        run: |
+          echo "${PWD##*/}"
+          ls -l
 #     ------------------------------------------
       - name: Pull Vercel Environment Information
         run: vercel pull --yes --environment=preview --token=${{ secrets.VERCEL_TOKEN }}
