--- a/.github/workflows/production.yaml
+++ b/.github/workflows/production.yaml
@@ -34,7 +34,30 @@ jobs:
           echo "${PWD##*/}"
           ls -l
 #     ------------------------------------------
+#     ------------------------------------------
+      - uses: actions/checkout@v3
+      - name: Set up Python 3.12.1
+        uses: actions/setup-python@v3
+        with:
+          python-version: 3.12.1
+
+      - name: Install dependencies
+        run: |
+          python -m pip install --upgrade pip
+          pip install robotframework
+          pip install robotframework-seleniumlibrary
+
+      - name: Test with RobotFramework
+    #        run: robot robot/check_invoices.robot  
+        run: robot robot/selenium_open_close.robot
         
+      - name: Test Report Generation
+        uses: actions/upload-artifact@v4
+        if: success() || failure()
+        with:
+          name: Report                # Name of the folder
+          path: report.html           # Path to test results
+#     -----------------------------------------
       - name: Build Project Artifacts
         run: vercel build --prod --token=${{ secrets.VERCEL_TOKEN }}
         
